--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -90,9 +90,11 @@
     <Compile Include="Http\CredentialStore.cs" />
     <Compile Include="Http\CredentialType.cs" />
     <Compile Include="Http\ICredentialCache.cs" />
+    <Compile Include="Http\IClientCertificateProvider.cs" />
     <Compile Include="Http\IHttpWebResponse.cs" />
     <Compile Include="Http\IProxyCache.cs" />
     <Compile Include="Http\MultipartWebRequest.cs" />
+    <Compile Include="Http\NullClientCertificateProvider.cs" />
     <Compile Include="Http\NullCredentialProvider.cs" />
     <Compile Include="Http\ProxyCache.cs" />
     <Compile Include="Http\RepositoryOperationNames.cs" />
