--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -113,6 +113,7 @@
     <Compile Include="NETPortable\NetPortableProfileTable.cs" />
     <Compile Include="PackageRestoreConsent.cs" />
     <Compile Include="Packages\IChocolateyPackageMetadata.cs" />
+    <Compile Include="Packages\IChocolateyServerPackageMetadata.cs" />
     <Compile Include="Packages\LocalPackage.cs" />
     <Compile Include="Packages\OptimizedZipPackage.cs" />
     <Compile Include="Packages\UnzippedPackage.cs" />
