--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -247,6 +247,7 @@
     <Compile Include="NETPortable\ReferenceAssemblyPortableFrameworkMappings.cs" />
     <Compile Include="PackageRestoreConsent.cs" />
     <Compile Include="Packages\IChocolateyPackageMetadata.cs" />
+    <Compile Include="Packages\IChocolateyServerPackageMetadata.cs" />
     <Compile Include="Packages\LocalPackage.cs" />
     <Compile Include="Packages\OptimizedZipPackage.cs" />
     <Compile Include="Packages\UnzippedPackage.cs" />
