--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -246,6 +246,7 @@
     <Compile Include="NETPortable\ReferenceAssemblyFrameworkNameProvider.cs" />
     <Compile Include="NETPortable\ReferenceAssemblyPortableFrameworkMappings.cs" />
     <Compile Include="PackageRestoreConsent.cs" />
+    <Compile Include="Packages\DownloadCache.cs" />
     <Compile Include="Packages\IChocolateyPackageMetadata.cs" />
     <Compile Include="Packages\IChocolateyServerPackageMetadata.cs" />
     <Compile Include="Packages\LocalPackage.cs" />
