(GH-5) Interface for PackageDownloader
Also allow overriding PackageDownloader

--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -209,6 +209,7 @@
     <Compile Include="FileModifiers\XmlTransfomer.cs" />
     <Compile Include="Http\IHttpClient.cs" />
     <Compile Include="Utility\FrameworkNameEqualityComparer.cs" />
+    <Compile Include="Utility\IPackageDownloader.cs" />
     <Compile Include="Utility\IProgressProvider.cs" />
     <Compile Include="Utility\IVersionSpec.cs" />
     <Compile Include="Utility\MemoryCache.cs" />
