--- a/nuget/Chocolatey-NuGet.Core/Chocolatey-NuGet.Core.nuspec
+++ b/nuget/Chocolatey-NuGet.Core/Chocolatey-NuGet.Core.nuspec
@@ -2,7 +2,7 @@
 <package xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
   <metadata>
     <id>Chocolatey-NuGet.Core</id>
-    <version>2.11.0.20190305</version>
+    <version>2.11.0.20210506</version>
     <owners>Gary Ewan Park</owners>
     <title>Chocolatey NuGet Core</title>
     <authors>Chocolatey Software, Inc</authors>
@@ -13,6 +13,12 @@
     <tags>apt-get machine repository chocolatey</tags>
     <summary>NuGet Enhanced for Chocolatey</summary>
     <description>NuGet Enhanced for Chocolatey</description>
+    <releaseNotes>
+- Create basic nuget package for NuGet.Core assembly
+- Prevent creation of empty NuGet.Config file
+- Pack all files in working folder when there is no files element in nuspec file
+- Use correct path separator, depending on what operating system is being run on
+    </releaseNotes>
     <dependencies>
       <group targetFramework=".NETFramework4.0" />
     </dependencies>
