(maint) Make nuspec more specific
To ensure that only the files that should be included make their way into
the generated nupkg file.

--- a/nuget/Chocolatey-NuGet.Core/Chocolatey-NuGet.Core.nuspec
+++ b/nuget/Chocolatey-NuGet.Core/Chocolatey-NuGet.Core.nuspec
@@ -21,4 +21,8 @@
       <group targetFramework=".NETFramework4.0" />
     </dependencies>
   </metadata>
+  <files>
+    <file src="lib/net4/NuGet.Core.dll" target="lib/net4" />
+    <file src="lib/net4/NuGet.Core.pdb" target="lib/net4" />
+  </files>
 </package>
