--- a/test/Core.Test/packages.config
+++ b/test/Core.Test/packages.config
@@ -4,4 +4,5 @@
   <package id="Ninject" version="2.2.1.4" />
   <package id="xunit" version="1.9.2" targetFramework="net40" />
   <package id="xunit.extensions" version="1.9.2" targetFramework="net40" />
+  <package id="xunit.runner.visualstudio" version="2.4.1" targetFramework="net40" developmentDependency="true" />
 </packages>
