--- a/test/Test.Utility/packages.config
+++ b/test/Test.Utility/packages.config
@@ -3,4 +3,5 @@
   <package id="Moq" version="4.1.1309.0919" targetFramework="net40" />
   <package id="xunit" version="1.9.2" targetFramework="net40" />
   <package id="xunit.extensions" version="1.9.2" targetFramework="net40" />
+  <package id="xunit.runner.visualstudio" version="2.4.1" targetFramework="net40" developmentDependency="true" />
 </packages>
